<resources>
    <string name="app_name">WeWash</string>

    <string name="Email_Address">Email Address</string>
    <string name="Password">Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Sign_In">Sign In</string>
    <string name="Sign_Up">SignUP</string>
    <string name="Display_Name">Name</string>
    <string name="Full_Name">Enter Name</string>
    <string name="Gender_Type">Gender</string>
    <string name="Phone_Number">Phone Number</string>

    <array name="AreaList">
        <item>MainGate</item>
        <item>Near DeoNiwas</item>
        <item>Lawgate</item>
        <item>Maheru</item>
    </array>
    <array name="ServicesList">
        <item>Wash And Fold</item>
        <item>Wash And Iron</item>
    </array>
    <array name="PickUpTime">
        <item>10:00 AM - 12:00 PM</item>
        <item>12:00 PM - 2:00 PM</item>
        <item>3:00 PM - 5:00 PM</item>
        <item>5:00 PM - 8:00 PM</item>
    </array>
    <array name="NoOfClothes">
        <item>10 - 20</item>
        <item>21 - 40</item>
        <item>41 - 60</item>
        <item>61 - 100</item>
        <item>100+</item>
    </array>
    <string name="Donot_have_account">Don\'t Have Account?</string>

    <string name="Trouble_Logging_In">Trouble Logging in? </string>
    <string name="reset_text">Dont worry you can reset your password by entering your registered email address below.</string>
    <string name="Reset">Reset Your Password</string>
    <string name="Send">Send</string>
    <string name="Otp">Enter Otp</string>
    <string name="men_icon_name">Men </string>
    <string name="women_icon_name">Women </string>
    <string name="profile_icon_name">Profile </string>

    <string name="Profile_Content_Description_Profile_Picture">This image is to display profile Picture</string>
    <string name="Profile_Description_EditIcon">This is to edit something</string>
    <string name="Profile_ViewAllOrders">View AllOrders</string>
    <string name="Profile_MyOrders">My Orders</string>
    <string name="Profile_MyOrders_ViewAll">View All Orders</string>

    <string name="Profile_Settings">Account Settings</string>
    <string name="Profile_Settings_Update">Update</string>
    <string name="Profile_MyAddresses">My Addresses</string>
    <string name="Profile_MyAddresses_Add">Change Address</string>
    <string name="Profile_Logout">Logout</string>
    <string name="Profile_Content_Description_Logout">This is to logout from application</string>
    <string name="Profile_MyWishList_View">Your WishList</string>
    <string name="MyAddress_Fragment_Add_New_Address">+Add a New Address</string>
    <string name="Add_New_Address">Add New Address</string>
    <string name="Update_Profile">Update Profile</string>
    <string name="Delete_Profile">Delete Account</string>
    <string name="Locate_Store">Locate WeWash Stores</string>
    <string name="Locate_Map">Locate in Map</string>
    <string name="Store_phone">09041577549</string>
    <string name="Store_name">Shiv Laundry</string>
    <string name="Store_address">Nanak Nagri , Kapurthala , Punjab , 144411</string>
    <string name="PriceList_Note">Note : Dry Cleaning services are not yet available and minimum order value should be of 50/-</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
