<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.MyProfile"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Toolbar_Update_page"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/DodgerBlue"
        app:title="Update Profile"
        app:titleTextColor="@color/White"
        app:navigationIcon="@drawable/ic_arrow_back_black"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Up_Txt_Layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:backgroundTint="@color/DodgerBlue"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Update_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Full_Name"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Up_Txt_Layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Update_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email_Address"
            android:enabled="false"
            android:inputType="textEmailAddress"
            android:drawableEnd="@drawable/ic_verified_user_black_24dp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Up_Txt_Layout_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Update_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Phone_Number"
            android:inputType="phone"
            android:maxLength="10"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Update_Profile"
        android:id="@+id/UpdateProfile"
        android:background="@drawable/buttons"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:onClick="UpdateProfile"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Delete_Profile"
        android:id="@+id/DeleteProfile"
        android:background="@drawable/buttons"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:onClick="DeleteProfile"
        android:layout_marginTop="5dp"/>


</LinearLayout>