<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocateStore.LocateStore"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Toolbar_SignUp_Page"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/DodgerBlue"
        app:title="@string/Locate_Store"
        app:titleTextColor="@color/White"
        app:navigationIcon="@drawable/ic_arrow_back_black"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:contentDescription="@string/Locate_Store"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_store_black_24dp"
            android:contentDescription="@string/Locate_Store"
            android:id="@+id/store_logo"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/store_logo"
            android:text="@string/Store_name"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="5dp"
            android:id="@+id/store_name"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location_on_black_24dp"
            android:layout_below="@+id/store_logo"
            android:id="@+id/location"
            android:contentDescription="@string/Locate_Store"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/store_logo"
            android:text="@string/Store_address"
            android:layout_below="@+id/store_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:id="@+id/store_address"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone_black_24dp"
            android:layout_below="@+id/store_address"
            android:id="@+id/locate_phone"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/Locate_Store"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/store_logo"
            android:text="@string/Store_phone"
            android:layout_below="@+id/store_address"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/store_phone"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/store_phone"
            android:background="@drawable/buttons"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/Locate_Map"
            android:id="@+id/locate_map"
            android:onClick="LocateMap"/>


    </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
