<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".Profile.Profile">
   <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Toolbar_Profile_Page"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/DodgerBlue"
        app:title="My Account"
        app:titleTextColor="@color/White"
        app:navigationIcon="@drawable/ic_arrow_back_black"
        />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card1_profile"
        android:layout_below="@id/Toolbar_Profile_Page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/DodgerBlue"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/Profile_img"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:padding="20dp"
                android:src="@drawable/men_icon"
                android:contentDescription="@string/Profile_Content_Description_Profile_Picture"
                />
            <TextView
                android:id="@+id/Profile_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Profile_img"
                android:layout_centerHorizontal="true"
                android:text="@string/Display_Name"
                android:textColor="@color/White"
                />
            <TextView
                android:id="@+id/Profile_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Profile_Name"
                android:layout_centerHorizontal="true"
                android:paddingTop="10dp"
                android:text="@string/Phone_Number"
                android:textColor="@color/White"
                />

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card3_profile"
        android:layout_below="@id/card1_profile"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/Profile_Fragment_TxtView_Profile_MyOrders_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Profile_MyOrders"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textSize="16sp"
                android:padding="10dp"
                />
            <View
                android:id="@+id/Profile_Fragment_View_Profile_line2"
                android:layout_below="@id/Profile_Fragment_TxtView_Profile_MyOrders_Label"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"
                />
            <TextView
                android:id="@+id/Profile_Fragment_TxtView_Profile_MyOrders"
                android:layout_below="@id/Profile_Fragment_View_Profile_line2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Profile_MyOrders_ViewAll"
                android:layout_alignParentEnd="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="@color/DodgerBlue"
                android:textSize="16sp"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="DisplayOrders"
                />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card5_profile"
        android:layout_below="@id/card3_profile"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/Profile_Fragment_TxtView_Profile_MySettings_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Profile_Settings"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textSize="16sp"
                android:padding="10dp"
                />
            <View
                android:id="@+id/Profile_Fragment_View_Profile_line3"
                android:layout_below="@id/Profile_Fragment_TxtView_Profile_MySettings_Label"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"
                />
            <TextView
                android:id="@+id/Profile_Fragment_TxtView_Profile_MySettings"
                android:layout_below="@id/Profile_Fragment_View_Profile_line3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Profile_Settings_Update"
                android:layout_alignParentEnd="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="@color/DodgerBlue"
                android:textSize="16sp"
                android:padding="10dp"
                android:onClick="MyProfile"
                />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card7_profile"
        android:layout_below="@id/card5_profile"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Profile_Logout"
            android:textSize="18sp"
            android:drawableStart="@drawable/logout_icon"
            android:clickable="true"
            android:focusable="true"
            android:onClick="Logout"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            />
    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
        android:id="@+id/Profile_Fragment_Fragment_Container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>
</androidx.core.widget.NestedScrollView>