<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Login.A_SignUp"
    android:background="@color/grey">
   <ImageView
       android:layout_width="50dp"
       android:layout_height="30dp"
       android:src="@drawable/back"
       android:tint="@color/white"
       android:onClick="backButton"
       android:layout_marginTop="20dp"
       android:layout_marginLeft="10dp"
       android:id="@+id/backarrow"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Signup"
        android:id="@+id/tvSignup"
        android:layout_below="@+id/backarrow"
        android:textSize="45sp"
        android:fontFamily="@font/bold"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSignup"
        android:id="@+id/signup_cardview"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Sign_UP_Txt_Layout_1"
        android:layout_below="@id/tvSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"

        android:layout_marginTop="20dp"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Sign_Up_Txt_EditTxt_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Full_Name"
            android:inputType="textPersonName"
            android:fontFamily="@font/regular"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Sign_UP_Txt_Layout_2"
        android:layout_below="@id/Sign_UP_Txt_Layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:errorEnabled="true"
        android:layout_marginTop="5dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Sign_Up_Txt_EditTxt_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email_Address"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/regular"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Sign_UP_Txt_Layout_3"
        android:layout_below="@id/Sign_UP_Txt_Layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        android:layout_marginTop="5dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Sign_Up_Txt_EditTxt_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Phone_Number"
            android:inputType="phone"
            android:maxLength="10"
            android:fontFamily="@font/regular"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Sign_UP_Txt_Layout_4"
        android:layout_below="@id/Sign_UP_Txt_Layout_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        app:counterEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Sign_Up_Txt_EditTxt_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:fontFamily="@font/regular"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Sign_UP_Txt_Layout_5"
        android:layout_below="@id/Sign_UP_Txt_Layout_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:counterEnabled="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Sign_Up_Txt_EditTxt_Confirm_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Confirm_Password"
            android:inputType="textPassword"
            android:fontFamily="@font/regular"
            />
    </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/Sign_up_Btn_SignUp_7"
        android:layout_below="@id/signup_cardview"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Register"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:background="@drawable/button"
        android:fontFamily="@font/regular"
        />
</RelativeLayout>